# AbstractOsIbcEtfBalancer

contracts/modules/dex/: Cargo.toml
contracts/modules/dex/src/: commands.rs
contracts/modules/dex/src/exchanges/: mod.rs  osmosis_router.rs
contracts/simple-ica-client/: Cargo.toml
contracts/simple-ica-client/schema/: execute_msg.json  instantiate_msg.json  query_msg.json
contracts/simple-ica-client/src/: commands.rs  contract.rs  ibc.rs  lib.rs  msg.rs  proxy_asset.rs  queries.rs  state.rs
contracts/simple-ica-host/: Cargo.toml
contracts/simple-ica-host/schema/: instantiate_msg.json
contracts/simple-ica-host/src/: contract.rs  msg.rs
